# keepsecret

./: .flatpak-manifest.json  CMakeLists.txt  REUSE.toml  org.kde.keepsecret.desktop  org.kde.keepsecret.json  org.kde.keepsecret.metainfo.xml
po/ar/: keepsecret.po
po/ca/: keepsecret.po
po/ca@valencia/: keepsecret.po
po/cs/: keepsecret.po
po/de/: keepsecret.po
po/es/: keepsecret.po
po/eu/: keepsecret.po
po/fi/: keepsecret.po
po/fr/: keepsecret.po
po/ga/: keepsecret.po
po/he/: keepsecret.po
po/ia/: keepsecret.po
po/it/: keepsecret.po
po/ka/: keepsecret.po
po/ko/: keepsecret.po
po/lt/: keepsecret.po
po/nl/: keepsecret.po
po/pl/: keepsecret.po
po/pt_BR/: keepsecret.po
po/ro/: keepsecret.po
po/sk/: keepsecret.po
po/sl/: keepsecret.po
po/sv/: keepsecret.po
po/tr/: keepsecret.po
po/uk/: keepsecret.po
po/zh_CN/: keepsecret.po
po/zh_TW/: keepsecret.po
src/: CMakeLists.txt  collectionsmodel.cpp  collectionsmodel.h  main.cpp
src/qml/: CollectionContentsPage.qml  CollectionListPage.qml  EntryPage.qml  Main.qml
